# gaia-research

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: execution-record.md
docs/foundations/: README.md  research-prompts.md
docs/plans/: 2026-06-13-report-workflow-parity-implementation.md  2026-06-14-research-prompt-architecture.md
docs/prior-art/lkm-explorer/: README.md
docs/prior-art/lkm-explorer/gaia_lkm_explorer/: __init__.py
docs/prior-art/lkm-explorer/tests_lkm_explorer/: test_artifacts.py  test_cli_explore.py  (+12 more)
docs/prior-art/skills/: README.md
docs/prior-art/starmap/: README.md
docs/specs/: 2026-06-13-research-workflow-parity-acceptance.md  2026-06-13-research-workflow-parity-matrix.md  2026-06-14-evidencemaster-bohrium-agent.md  2026-06-14-evidencemaster-fast-prompt-backlog.md
docs/testing/: 2026-06-14-evidencemaster-codewhale-v2-bug-list.md  2026-06-14-evidencemaster-first-round-bug-list.md
scripts/: audit_goal_a.sh  smoke_installed_wheel.sh
src/gaia_research/: __init__.py  artifacts.py  assessment.py  benchmark.py  cli.py  contracts.py  evidence_selection.py  field_map.py  focus.py  landscape.py  orchestrator.py  orchestrator_ports.py  plugin.py  prompt_assets.py  proposal.py  report.py  research_cli.py  research_materialization.py  research_orchestrator.py  research_providers.py  research_report_writing.py  research_runtime.py  review.py  run.py  run_config.py  runner.py  source_packages.py  stop.py  sync.py  workflow_state.py
src/gaia_research/prompts/: __init__.py
src/gaia_research/skills/: __init__.py
tests/: test_agent_platform_contract.py  test_cli_plugin.py  test_cli_review.py  test_cli_status.py  test_core_contract.py  test_installed_wheel_smoke.py  test_landscape.py  test_prompt_assets.py  test_research_artifacts.py  test_research_assessment.py  test_research_contracts.py  test_research_evidence_selection.py  test_research_field_map.py  test_research_focus.py  test_research_landscape.py  test_research_orchestrator.py  test_research_proposal.py  test_research_providers.py  test_research_report.py  test_research_run_config.py  test_research_stop.py  test_review_run_contract.py  test_review_runner.py  test_run.py  test_source_boundary.py  test_workflow_state.py
(+53 files in other folders)
