[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gaia-research"
version = "0.1.0"
description = "Standalone Gaia research package"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "SiliconEinstein" }]
dependencies = [
  "gaia-lang @ git+https://github.com/SiliconEinstein/Gaia.git@main",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.scripts]
gaia-research = "gaia_research.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gaia_research"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["gaia_research"]
